[package]
name = "roulette"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"

[target.'cfg(windows)'.dependencies]
is_elevated = "0.1.2"

[target.'cfg(unix)'.dependencies]
sudo = "0.6.0"
